fix globe stretch

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -10,8 +10,9 @@ body {
 }
 
 body canvas {
-    margin-right: 15%;
-    margin-left: -10%;
+    margin-right: 13%;
+    margin-left: -12%;
+    transform: scale(1.18, 1);
 }
 
 h1 {
@@ -143,9 +144,6 @@ input[type=checkbox] {
 /* GAUGE */
 #gauge {
     background-color: black;
-    /* position: absolute;
-    top: 50%;
-    right: 11%; */
     display: block;
     margin: 0 auto;
     margin-top: -5%;
@@ -154,9 +152,6 @@ input[type=checkbox] {
 
 p {
     color: gold;
-    /* position: absolute;
-    top: 89%;
-    right: 14%; */
     text-align: center;
     margin-top: 7%;
 }
